--- a/public/Index.html
+++ b/public/Index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
+        <link rel="stylesheet" href="./styles/normalize.css">
         <link rel="stylesheet" href="./styles/main.css">
         <title>Персонажи Игры престолов</title>
         <style>
