add html and css for quotes section

--- a/public/Index.html
+++ b/public/Index.html
@@ -52,6 +52,11 @@
             <section id="card-container">
 
             </section>
+
+            <!-- ЦИТАТЫ -->
+        <section id="quote-container">
+            <!-- ЦИТАТЫ - КОНЕЦ -->
+        </section>
         </main>
         <footer></footer>
 
