--- a/public/Index.html
+++ b/public/Index.html
@@ -1,9 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Cutscreen GoT</title>
+        <link rel="stylesheet" href="./styles/cutscene.css" />
     </head>
-    <body></body>
+    <body>
+        <div class="scene">
+            <div
+                class="layer"
+                style="background-image: url(./images/cutscreen/last.jpg)"
+            ></div>
+            <div
+                class="layer"
+                style="background-image: url(./images/cutscreen/middle.png)"
+            >
+                <div class="layer__content">
+                    <h1>Игра Престолов</h1>
+                </div>
+            </div>
+            <div
+                class="layer"
+                style="background-image: url(./images/cutscreen/2.png)"
+            ></div>
+            <div
+                class="layer"
+                style="background-image: url(./images/cutscreen/1.png)"
+            ></div>
+
+            <div class="layer">
+                <div class="layer__end">
+                    <h3>Зима близко</h3>
+                </div>
+            </div>
+
+            <div class="layer">
+                <div class="layer__link">
+                    <a href="./main.html">Нажми меня</a>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
