add scroll dragon

--- a/public/main.html
+++ b/public/main.html
@@ -41,6 +41,9 @@
                 </figure>
             </div>
             <section id="card-container"></section>
+			<figure>
+				<img src="./images/targaryen-logo_antique.png" alt="" class="autoRotate">
+			</figure>
             <!-- ПОИСК - КОНЕЦ -->
 
             <!-- ГАЛЕРЕЯ -->
