исправила стили фото на %

--- a/public/quiz.html
+++ b/public/quiz.html
@@ -13,8 +13,8 @@
     <div class="quiz-container">
         <h2>Игра престолов</h2>
         <p id="question">Ваш вопрос появится здесь</p>
-        <img src="" alt="фото вопроса"id="question-image" width="500px">
-        <img src="" alt="фото результата" id="result-image" width="500px">
+        <img src="" alt="фото вопроса"id="question-image" class="image" >
+        <img src="" alt="фото результата" id="result-image" class="image" >
         <div class="options">
             <button id="option1" class="options button"></button>
             <button id="option2" class="options button"></button>
