--- a/public/recipebook/cake.html
+++ b/public/recipebook/cake.html
@@ -4,42 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../styles/recipe.css">
 </head>
 <body>
-    <h1>Лимонные пирожные</h1>
-    <section>
-        <div>
-            <img src="../images/recipes/cake.png" alt="Лимонные пирожные">
+    <h2 class="title title_font">Лимонные пирожные</h2>
+    <section class="recipe">
+        <div class="recipe__quotation">
+            <p>Далее принесли телячьи зобные железы и пирог с голубиным мясом, печеные яблоки с корицей и лимонные пирожные в сахарной глазури, но Санса к этому времени уже наелась досыта и смогла управиться только с двумя лимонными пирожными — больше бы не влезло, как бы она ни любила их.</p>
+            <p class="recipe__quotation-name">«ИГРА ПРЕСТОЛОВ»</p>
         </div>
-        <div>45–60 мини-кексов
-            Подготовка: 20 минут
-            Выпекание: 30 минут
-            Приготовление глазури: 20 минут</div>
-        
-            <div>Эти лимонные пирожные немного похоже на кексики. Оно одновременно простое и ужасно соблазнительное. Благодаря элегантной простоте и умеренной сладости оно идеально подойдет к чаю на полдник — хоть в столице Туманного Альбиона, хоть в Королевской Гавани.</div>
-
-            <div>Для пирожного
-                2 ½  стакана муки
-                1 ½  ч. л. разрыхлителя
-                ¼  ч. л. соды
-                ½  ч. л. соли
-                200  г сливочного масла комнатной
-                температуры плюс еще немного для
-                смазывания
-                1 ½  стакана сахара
-                2 ч. л. экстракта ванили
-                3  крупных яйца комнатной температуры
-                сок ½  лимона
-                2–4 ст. л. тертой лимонной цедры
-                1 стакан цельного молока
-                Для глазури
-                3  стакана сахарной пудры, просеянной
-                1⁄3  стакана лимонного сока плюс еще
-                немного при необходимости
-                1 ч. л. размягченного сливочного масла
-                желтый пищевой краситель (по желанию)
-                для оформления можно взять цукаты, зерна гр</div>
-        <div>
+        <div class="recipe__container">
+            <div class="recipe__container-block">
+                <div class="recipe__timing">
+                    <p>45–60 мини-пирожных</p>
+                    <p>Подготовка: 20 минут</p>
+                    <p>Выпекание: 30 минут</p>
+                    <p>Приготовление глазури: 20 минут</p>
+                </div>
+                <div class="recipe__info">
+                    Это лимонное пирожное немного похоже на кексики. Оно одновременно простое и ужасно соблазнительное. Благодаря элегантной простоте и умеренной сладости оно идеально подойдет к чаю на полдник — хоть в столице Туманного Альбиона, хоть в Королевской Гавани.
+                </div>
+            </div>
+            <div class="recipe__container-image">
+                <img class="recipe-photo" src="../images/recipes/cake.png" alt="Лимонные пирожные">
+            </div>
+        </div>
+        <div class="recipe__ingredients">
+            <ul>
+                <li>2 ½ стакана муки</li>
+                <li>1 ½ ч. л. разрыхлителя</li>
+                <li>¼ ч. л. соды</li>
+                <li>½ ч. л. соли</li>
+                <li> 200 г сливочного масла комнатной температуры плюс еще немного для смазывания</li>
+                <li>1 ½ стакана сахара</li>
+                <li>2 ч. л. экстракта ванили</li>
+                <li>3 крупных яйца комнатной температуры</li>
+                <li>сок ½ лимона</li>
+                <li>2 – 4 ст. л. тертой лимонной цедры</li>
+                <li>1 стакан цельного молока</li>
+                <li>3 стакана сахарной пудры, просеянной</li>
+                <li>1⁄3 стакана лимонного сока плюс еще немного при необходимости</li>
+                <li>1 ч. л. размягченного сливочного масла</li>
+            </ul>
+        </div>
+        <div class="recipe__text">
             Разогрейте духовку до 175 °C. Смажьте маслом дно формы со сторонами 28 × 8 см,
             застелите куском пергаментной бумаги, снова смажьте маслом и  присыпьте мукой,
             стряхнув излишки.
@@ -52,8 +60,7 @@
             Вылейте тесто в форму и пеките примерно 30 минут или пока зубочистка при протыкании не останется сухой. Тесто должно лишь слегка подрумяниться сверху. Остудите 15 минут в форме, затем выньте и дайте остыть еще 15 минут. Поставьте в холодильник не менее чем на 30 минут.
             Затем нарежьте кубиками. Теперь пора приниматься за глазурь.
             Соедините сахарную пудру и лимонный сок на водяной бане на среднем огне, постоянно помешивая. Продолжая размешивать, добавьте масло. Размешивайте до тех
-            пор, пока не образуется красивая однородная глазурь. При необходимости подлейте
-            немного лимонного сока.
+            пор, пока не образуется красивая однородная глазурь.
         </div>
     </section>
 </body>
