--- a/public/recipebook/soup.html
+++ b/public/recipebook/soup.html
@@ -4,32 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../styles/recipe.css">
 </head>
 <body>
-    <h1>Суп из лука-порея</h1>
-    <section>
-        <div>
-            <img src="../images/recipes/soup.png" alt="Суп из лука-порея">
+    <h2 class="title title_font">Суп из лука-порея</h2>
+    <section class="recipe">
+        <div class="recipe__quotation">
+            <p>Свадебное застолье открывал суп из порея, за ним следовал салат из зеленой фасоли, лука и свеклы.</p>
+            <p class="recipe__quotation-name">«БУРЯ МЕЧЕЙ»</p>
         </div>
-        <div>4 порции ◆ Подготовка: 5 минут ◆ Варка: 45 минут</div>
-        
-            <div>С добавлением картофеля в этот относительно современный рецепт текстура супа изменяется — получается скорее суп-пюре, где как нельзя лучше раскрывается вкус порея. Густая и сытная похлебка — идеальная еда для холодной погоды.</div>
-
-            <div>4 ст. л. (50 г) сливочного масла
-                2  стебля лука-порея (только белая
-                и  светло-зеленая части), промытых
-                и нарезанных тонкими кольцами
-                1  небольшая луковица, мелко порубленная
-                2 крупные картофелины, очищенные
-                и порубленные
-                4 стакана куриного бульона
-                соль и молотый черный перец
-                рубленая петрушка для подачи</div>
-        <div>
-            Разогрейте 2 столовые ложки масла в кастрюле с толстым дном на среднем огне. Обжаривайте в нем порей и лук, помешивая, примерно 5 минут или до мягкости овощей.
-            Добавьте картофель и жарьте еще 2–3 минуты, затем влейте бульон. Доведите до кипения, затем уменьшите огонь и варите при слабом кипении 35 минут.
-            С помощью толкушки для картофеля или погружного блендера превратите суп
-            в пюре почти однородной консистенции. Добавьте оставшееся сливочное масло. Приправьте солью и перцем, оформите зеленью и подавайте на стол.
+        <div class="recipe__container">
+            <div class="recipe__container-image">
+                <img class="recipe-photo" src="../images/recipes/soup.png" alt="Суп из лука-порея">
+            </div>
+            <div class="recipe__container-block">
+                <div class="recipe__timing">
+                    <p>4 порции</p>
+                    <p>Подготовка: 5 минут</p>
+                    <p>Варка: 45 мин</p>
+                </div>
+                <div class="recipe__ingredients">
+                    <ul>
+                        <li>4 ст. л. (50 г) сливочного масла</li>
+                        <li>2 стебля лука-порея (только белая и  светло-зеленая части), промытых и нарезанных тонкими кольцами</li>
+                        <li>1 небольшая луковица, мелко порубленная</li>
+                        <li>2 крупные картофелины, очищенные и порубленные</li>
+                        <li>4 стакана куриного бульона</li>
+                        <li>соль и молотый черный перец</li>
+                        <li>рубленая петрушка для подачи</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="recipe__info"> С добавлением картофеля в этот относительно современный рецепт текстура супа изменяется — получается скорее суп-пюре, где как нельзя лучше раскрывается вкус порея. Густая и сытная похлебка — идеальная еда для холодной погоды.
+        </div>
+        <div class="recipe__text"> Разогрейте 2 столовые ложки масла в кастрюле с толстым дном на среднем огне. Обжаривайте в нем порей и лук, помешивая, примерно 5 минут или до мягкости овощей. Добавьте картофель и жарьте еще 2–3 минуты, затем влейте бульон. Доведите до кипения, затем уменьшите огонь и варите при слабом кипении 35 минут. С помощью толкушки для картофеля или погружного блендера превратите суп в пюре почти однородной консистенции. Добавьте оставшееся сливочное масло. Приправьте солью и перцем, оформите зеленью и подавайте на стол.
         </div>
     </section>
 </body>
