--- a/public/recipebook/wildboar.html
+++ b/public/recipebook/wildboar.html
@@ -4,30 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../styles/recipe.css">
 </head>
 <body>
-    <h1>Запеченное мясо кабана</h1>
-    <section>
-        <div>
-            <img src="../images/recipes/wildboar.png" alt="Запеченное мясо кабана">
+    <h2 class="title title_font">Запеченное мясо кабана</h2>
+    <section class="recipe">
+        <div class="recipe__quotation">
+            <p>«Санса, — вмешалась леди Алерия, — вы, должно быть, проголодались. Не желаете ли разделить со мной трапезу и отведать мяса кабана и лимонных кексов?»</p>
+            <p class="recipe__quotation-name">«БУРЯ МЕЧЕЙ»</p>
         </div>
-        <div>2 порции ◆ Подготовка: 20 минут
-            Маринование: 1–12 часов ◆ Жаренье: 15–25 минут
-            Приготовление соуса: 15 минут</div>
-        
-            <div>Сначала во вкусе соуса ощущается очень много перца, который быстро перемешивается со сложными привкусами, создающими во рту роскошный праздник. Здесь преобладает гвоздика, но, несмотря на количество, она не перекрывает остальной букет. Само
-                по себе мясо кабана — в чем-то гибрид, притом очень вкусный: его текстура напоминает говяжий стейк высшего качества, а по насыщенности оно никак не уступает оленине,
-                при этом в нем отсутствует привкус дичи. Культовая средневековая вещь!</div>
-
-            <div>4 куска вырезки кабана, по 110–120 г
-                каждый
-                ¼   стакана красного вина, например
-                риохи или шираза
-                2 ч. л. «крепкого порошка» (с. 24)
-                1 стакан яблочного сока или сока белого винограда
-                1⁄8 стакана красного винного уксуса
-                12–20 бутонов гвоздики</div>
-        <div>
+        <div class="recipe__container">
+            <div class="recipe__container-block">
+                <div class="recipe__timing">
+                    <p>2 порции</p>
+                    <p>Подготовка: 20 минут</p>
+                    <p>Маринование: 1 – 12 часов</p>
+                    <p>Приготовление соуса: 15 минут</p>
+                    <p>Жаренье: 15 –25 минут</p>
+                </div>
+                <div class="recipe__info">
+                    Сначала во вкусе соуса ощущается очень много перца, который быстро перемешивается со сложными привкусами, создающими во рту роскошный праздник. Здесь преобладает гвоздика, но, несмотря на количество, она не перекрывает остальной букет. Само по себе мясо кабана — в чем-то гибрид, притом очень вкусный: его текстура напоминает говяжий стейк высшего качества, а по насыщенности оно никак не уступает оленине,
+                при этом в нем отсутствует привкус дичи. Культовая средневековая вещь!
+                </div>
+            </div>
+            <div class="recipe__container-image">
+                <img class="recipe-photo" src="../images/recipes/wildboar.png" alt="Запеченное мясо кабана">
+            </div>
+        </div>
+        <div class="recipe__ingredients">
+            <ul>
+                <li>4 куска вырезки кабана, по 110 – 120 г каждый</li>
+                <li>¼ стакана красного вина, например риохи или шираза</li>
+                <li>1 стакан яблочного сока или сока белого винограда</li>
+                <li>1⁄8 стакана красного винного уксуса</li>
+                <li>12–20 бутонов гвоздики</li>
+            </ul>
+        </div>
+        <div class="recipe__text">
             Мякоть кабана поместите в полиэтиленовый зиплок-пакет с застежкой или выложите в форму для запекания. Смешайте вино, уксус и сок с 1 ч. л. «крепкого порошка»
             и полейте этим маринадом мясо. Дайте промариноваться от 1 часа при комнатной температуре до 12 часов в холодильнике.
             Разогрейте духовку до 175 °C.
