--- a/public/recipe.html
+++ b/public/recipe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./test.css">
+    <link rel="stylesheet" href="./styles/recipe.css">
 </head>
 <body>
     <h2 class="title title_font">Ешь досыта , дружище . Зима близко.</h2>
@@ -50,8 +50,7 @@
                 <img class="photo" src="./images/recipes/cake.png" alt="Лимонные пирожные">
             </div>
             <div class="recipe-box__content content">
-                <h3>Лимонные пирожные</h3>
-                <p>Далее принесли телячьи зобные железы и пирог с голубиным мясом, печеные яблоки с корицей и лимонные пирожные в сахарной глазури, но Санса к этому времени уже наелась досыта и смогла управиться только с двумя лимонными пирожными — больше бы не влезло, как бы она ни любила их.</p>
+                <h3 class="content__title">Лимонные пирожные</h3>
                 <a class="content__link" target="_blank" href="./recipebook/cake.html">Подробнее...</a>
             </div>
         </div>
@@ -60,8 +59,7 @@
                 <img class="photo" src="./images/recipes/chiken.png" alt="Курица в меду">
             </div>
             <div class="recipe-box__content content">
-                <h3>Курица в меду</h3>
-                <p>«Что, опять проголодался?» На столе еще оставалось полкурицы в меду. Джон протянул было руку, чтобы отломить ножку, но вдруг передумал. Он вонзил в  тушку нож и  бросил ее на  пол между ног. Призрак покорно и беззвучно впился в нее клыками.</p>
+                <h3 class="content__title">Курица в меду</h3>
                 <a class="content__link" target="_blank" href="./recipebook/chiken.html">Подробнее...</a>
             </div>
         </div>
@@ -70,8 +68,7 @@
                 <img class="photo" src="./images/recipes/wildboar.png" alt="Запеченное мясо кабана">
             </div>
             <div class="recipe-box__content content">
-                <h3>Запеченное мясо кабана</h3>
-                <p>«Санса, — вмешалась леди Алерия, — вы, должно быть, проголодались. Не желаете ли разделить со мной трапезу и отведать мяса кабана и лимонных кексов?»</p>
+                <h3 class="content__title">Запеченное мясо кабана</h3>
                 <a class="content__link" target="_blank" href="./recipebook/wildboar.html">Подробнее...</a>
             </div>
         </div>
@@ -80,8 +77,7 @@
                 <img class="photo" src="./images/recipes/soup.png" alt="Суп из лука-порея">
             </div>
             <div class="recipe-box__content content">
-                <h3>Суп из лука-порея</h3>
-                <p>Свадебное застолье открывал суп из порея, за ним следовал салат из зеленой фасоли, лука и свеклы</p>
+                <h3 class="content__title">Суп из лука-порея</h3>
                 <a class="content__link" target="_blank" href="./recipebook/soup.html">Подробнее...</a>
             </div>
         </div>
@@ -90,8 +86,7 @@
                 <img class="photo" src="./images/recipes/wine.jpg" alt="Сангрия Джоффри">
             </div>
             <div class="recipe-box__content content">
-                <h3>Сангрия Джоффри</h3>
-                <p>— У меня нет больше вина, — заявил Джоффри. — Как же мне выпить тост без вина? Услужи мне, дядя Бес. Раз уж ты не хочешь выступить на турнире, побудь моим чашником.</p>
+                <h3 class="content__title">Сангрия Джоффри</h3>
                 <a class="content__link" target="_blank" href="./recipebook/wine.html">Подробнее...</a>
             </div>
         </div>
