--- a/public/recipebook/apple.html
+++ b/public/recipebook/apple.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../test.css">
+    <link rel="stylesheet" href="../styles/recipe.css">
 </head>
 <body>
     <h2 class="title title_font">Печеные яблоки</h2>
@@ -15,7 +15,7 @@
         </div>
         <div class="recipe__container">
             <div class="recipe__container-image">
-                <img class="recipe-photo" src="../images/recipes/apple.png" alt="Печеные яблоки"">
+                <img class="recipe-photo" src="../images/recipes/apple.png" alt="Печеные яблоки">
             </div>
             <div class="recipe__container-block">
                 <div class="recipe__timing">
@@ -23,26 +23,24 @@
                     <p>Подготовка: 5 минут</p>
                     <p>Выпекание: 1 час</p>
                 </div>
-                <div class="recipe__info">
-                    Запекать яблоки по этому рецепту — задача не из легких. Грецкие орехи и сухофрукты создают контраст нежной, пропитанной ароматом кленового сиропа фруктовой мякоти, а пряности придают яблочкам пикантность.
+                <div class="recipe__ingredients">
+                    <ul>
+                        <li>8 крупных яблок гренни смит</li>
+                        <li>¾ стакана сушеной вишни или клюквы</li>
+                        <li>¾ стакана коричневого сахара, утрамбованного</li>
+                        <li>¼ стакана рубленых грецких орехов</li>
+                        <li>2 ½  ст. л. смеси молотых корицы, мускатного ореха, имбиря и гвоздики</li>
+                        <li>1 стакан яблочного сока</li>
+                        <li>1 2⁄3 стакана воды</li>
+                        <li>½ стакана кленового сиропа</li>
+                        <li>1 ст. л. сливочного масла</li>
+                    </ul>
                 </div>
             </div>
         </div>
-        <div class="recipe__ingredients">
-            <ul>
-                <li>8 крупных яблок гренни смит</li>
-                <li>¾ стакана сушеной вишни или клюквы</li>
-                <li>¾ стакана коричневого сахара, утрамбованного</li>
-                <li>¼ стакана рубленых грецких орехов</li>
-                <li>2 ½  ст. л. смеси молотых корицы, мускатного ореха, имбиря и гвоздики</li>
-                <li>1 стакан яблочного сока</li>
-                <li>1 2⁄3 стакана воды</li>
-                <li>½ стакана кленового сиропа</li>
-                <li>1 ст. л. сливочного масла</li>
-            </ul>
+        <div class="recipe__info"> Запекать яблоки по этому рецепту — задача не из легких. Грецкие орехи и сухофрукты создают контраст нежной, пропитанной ароматом кленового сиропа фруктовой мякоти, а пряности придают яблочкам пикантность.
         </div>
-        <div class="recipe__text">
-            Разогрейте духовку до 170 °C. У яблок удалите сердцевину, вырезав ее сверху и оставив мякоть снизу не прорезанной примерно на 2,5 см. Соедините сушеную вишню или клюкву, коричневый сахар, орехи и пряности и начините полученной смесью яблоки. Уложите яблоки в форму для выпекания, накройте фольгой и запекайте 40 минут. Затем снимите фольгу, полейте яблоки выделившимся соком и запекайте еще 25 минут. Тем временем прогрейте яблочный сок, кленовый сироп и сливочное масло на среднем огне, чтобы смесь приобрела консистенцию нежного соуса. Полейте готовые яблоки соусом и подавайте гостям угощение, не забыв к нему вилку и нож.
+        <div class="recipe__text"> Разогрейте духовку до 170 °C. У яблок удалите сердцевину, вырезав ее сверху и оставив мякоть снизу не прорезанной примерно на 2,5 см. Соедините сушеную вишню или клюкву, коричневый сахар, орехи и пряности и начините полученной смесью яблоки. Уложите яблоки в форму для выпекания, накройте фольгой и запекайте 40 минут. Затем снимите фольгу, полейте яблоки выделившимся соком и запекайте еще 25 минут. Тем временем прогрейте яблочный сок, кленовый сироп и сливочное масло на среднем огне, чтобы смесь приобрела консистенцию нежного соуса. Полейте готовые яблоки соусом и подавайте гостям угощение, не забыв к нему вилку и нож.
         </div>
     </section>
 </body>
