--- a/public/recipebook/wine.html
+++ b/public/recipebook/wine.html
@@ -4,26 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../styles/recipe.css">
 </head>
 <body>
-    <h1>Сангрия Джоффри</h1>
-    <section>
-        <div>
-            <img src="../images/recipes/wine.jpg" alt="Сангрия Джоффри">
+    <h2 class="title title_font">Сангрия Джоффри</h2>
+    <section class="recipe">
+        <div class="recipe__quotation">
+            <p>— У меня нет больше вина, — заявил Джоффри. — Как же мне выпить тост без вина? Услужи мне, дядя Бес. Раз уж ты не хочешь выступить на турнире, побудь моим чашником.</p>
+            <p class="recipe__quotation-name">«БУРЯ МЕЧЕЙ»</p>
         </div>
-        <div>4 порции ◆ Подготовка: 5 минут ◆ Варка: 45 минут</div>
-        
-            <div>Мы явно уяснили одно – в каждом доме должно быть вино. И не просто вино, а настоящая “винная станция”, включающая в себя медный кувшин и кубки. </div>
-
-            <div>Лимон – 3 штуки;
-                Апельсин – 3 штуки;
-                Персик – 2 штуки;
-                Красное испанское вино – 2 бутылки по 0,7 л.;
-                Сахарный сироп – 40 мл.;
-                Апельсиновый сок – 150 грамм;
-                Бренди – 80 мл.;
-                Кюрасао – 80 мл.</div>
-        <div>
+        <div class="recipe__container">
+            <div class="recipe__container-image">
+                <img class="recipe-photo" src="../images/recipes/wine.jpg" alt="Сангрия Джоффри">
+            </div>
+            <div class="recipe__container-block">
+                <div class="recipe__timing">
+                    <p>4 порции</p>
+                    <p>Подготовка: 5 минут</p>
+                    <p>Варка: 45 минут</p>
+                </div>
+                <div class="recipe__info"> Мы явно уяснили одно – в каждом доме должно быть вино. И не просто вино, а настоящая «винная станция», включающая в себя медный кувшин и кубки.
+                </div>
+                <div class="recipe__ingredients">
+                    <ul>
+                        <li>3 лимона</li>
+                        <li>3 апельсина</li>
+                        <li>2 персика</li>
+                        <li>1,4 л красного испанского вина</li>
+                        <li>40 мл сахарного сиропа</li>
+                        <li>150 мл апельсинового сока</li>
+                        <li>80 мл Бренди</li>
+                        <li>80 мл Кюрасао</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="recipe__text"> 
             Вымойте апельсины и лимоны, нарежьте ломтиками. Опустите персики в кипящую воду на несколько секунд, затем очистите, разделите пополам, удалите косточки, мякоть также нарежьте дольками. Положите фрукты в графин, добавьте красное вино и подсластите сахарным сиропом. Добавьте апельсиновый сок, бренди и кюрасао, размешайте и охладите в течение 2-3 часов.
         </div>
     </section>
