--- a/public/main.html
+++ b/public/main.html
@@ -429,6 +429,95 @@
             </section>
             <!-- ГАЛЕРЕЯ ФОТОГРАФИЙ КОНЕЦ -->
 
+            <!-- РЕЦЕПТЫ НАЧАЛО -->
+
+            <section class="recipes">
+                <h2 class="title title_font" style="font-size: 30px;">Ешь досыта , дружище . Зима близко.</h2>
+                <div class="recipe-box">
+                    <div class="recipe-box__image box">
+                        <img class="box__photo" src="./images/recipes/pie.webp" alt="Пирог с голубиным мясом">
+                    </div>
+                    <div class="recipe-box__content content">
+                        <h3 class="content__title">Пирог с голубиным мясом</h3>
+                        <a class="content__link" target="_blank" href="./recipebook/pie.html">Подробнее...</a>
+                    </div>
+                </div>
+                <div class="recipe-box">
+                    <div class="recipe-box__image box">
+                        <img class="box__photo" src="./images/recipes/pear.png" alt="Пряные груши в вине ">
+                    </div>
+                    <div class="recipe-box__content content">
+                        <h3 class="content__title">Пряные груши в вине </h3>
+                        <a class="content__link" target="_blank" href="./recipebook/pear.html">Подробнее...</a>
+                    </div>
+                </div>
+                <div class="recipe-box">
+                    <div class="recipe-box__image">
+                        <img class="box__photo" src="./images/recipes/bull.png" alt="Дикий бык, запеченный с пореем">
+                    </div>
+                    <div class="recipe-box__content content">
+                        <h3 class="content__title">Дикий бык, запеченный с пореем</h3>
+                        <a class="content__link" target="_blank" href="./recipebook/bull.html">Подробнее...</a>
+                    </div>
+                </div>
+                <div class="recipe-box">
+                    <div class="recipe-box__image">
+                        <img class="box__photo" src="./images/recipes/apple.png" alt="Печеные яблоки">
+                    </div>
+                    <div class="recipe-box__content content">
+                        <h3 class="content__title">Печеные яблоки</h3>
+                        <a class="content__link" target="_blank" href="./recipebook/apple.html">Подробнее...</a>
+                    </div>
+                </div>
+                <div class="recipe-box">
+                    <div class="recipe-box__image ">
+                        <img class="box__photo" src="./images/recipes/cake.png" alt="Лимонные пирожные">
+                    </div>
+                    <div class="recipe-box__content content">
+                        <h3 class="content__title">Лимонные пирожные</h3>
+                        <a class="content__link" target="_blank" href="./recipebook/cake.html">Подробнее...</a>
+                    </div>
+                </div>
+                <div class="recipe-box">
+                    <div class="recipe-box__image">
+                        <img class="box__photo" src="./images/recipes/chiken.png" alt="Курица в меду">
+                    </div>
+                    <div class="recipe-box__content content">
+                        <h3 class="content__title">Курица в меду</h3>
+                        <a class="content__link" target="_blank" href="./recipebook/chiken.html">Подробнее...</a>
+                    </div>
+                </div>
+                <div class="recipe-box">
+                    <div class="recipe-box__image">
+                        <img class="box__photo" src="./images/recipes/wildboar.png" alt="Запеченное мясо кабана">
+                    </div>
+                    <div class="recipe-box__content content">
+                        <h3 class="content__title">Запеченное мясо кабана</h3>
+                        <a class="content__link" target="_blank" href="./recipebook/wildboar.html">Подробнее...</a>
+                    </div>
+                </div>
+                <div class="recipe-box">
+                    <div class="recipe-box__image">
+                        <img class="box__photo" src="./images/recipes/soup.png" alt="Суп из лука-порея">
+                    </div>
+                    <div class="recipe-box__content content">
+                        <h3 class="content__title">Суп из лука-порея</h3>
+                        <a class="content__link" target="_blank" href="./recipebook/soup.html">Подробнее...</a>
+                    </div>
+                </div>
+                <div class="recipe-box">
+                    <div class="recipe-box__image">
+                        <img class="box__photo" src="./images/recipes/wine.jpg" alt="Сангрия Джоффри">
+                    </div>
+                    <div class="recipe-box__content content">
+                        <h3 class="content__title">Сангрия Джоффри</h3>
+                        <a class="content__link" target="_blank" href="./recipebook/wine.html">Подробнее...</a>
+                    </div>
+                </div>
+            </section>
+
+            <!-- РЕЦЕПТЫ КОНЕЦ -->
+
             <!-- КАРТА И ЦИТАТЫ -->
             <section id="map-quote-section">
                 <div id="map-container"></div>
@@ -439,5 +528,12 @@
         <footer></footer>
 
         <script src="scripts/script.js"></script>
+        <script type="text/javascript" src="../vanilla-tilt.js"></script>
+        <script type="text/javascript">
+	        VanillaTilt.init(document.querySelectorAll(".recipe-box"), {
+		        max: 25,
+		        speed: 400
+	        });
+        </script>
     </body>
 </html>
