--- a/public/recipebook/apple.html
+++ b/public/recipebook/apple.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../styles/recipe.css">
+    <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
-    <h2 class="title title_font">Печеные яблоки</h2>
+    <h1 class="title title_font">Печеные яблоки</h1>
     <section class="recipe">
         <div class="recipe__quotation">
             <p>Тут были и печеные яблоки, и ягодные пироги, и груши, сваренные в крепленом вине. На всех столах — и на главных, и на дальних — в центре стояла соль, вокруг нее были разложены головы свежего сыра. Слуги сновали от одного конца к другому, передавая кувшины с горячим вином со специями и холодным осенним элем.</p>
