--- a/public/quiz.html
+++ b/public/quiz.html
@@ -9,18 +9,25 @@
 </head>
 
 <body>
+    <!-- видео -->
+
+    <video autoplay="autoplay" loop muted playsinline class="video-bg">
+        <source src="/public/video/1558426364253054541_720x406.mp4" type="video/mp4">
+    </video>
+
     <h1>Викторина</h1>
+    <h2>Игра престолов</h2>
     <div class="quiz-container">
-        <h2>Игра престолов</h2>
+
         <p id="question">Ваш вопрос появится здесь</p>
-        <img src="" alt="фото вопроса"id="question-image" class="image" >
-        <img src="" alt="фото результата" id="result-image" class="image" >
+        <img src="" alt="фото вопроса" id="question-image" class="image">
+        <img src="" alt="фото результата" id="result-image" class="image">
         <div class="options">
             <button id="option1" class="options button"></button>
             <button id="option2" class="options button"></button>
             <button id="option3" class="options button"></button>
         </div>
-        
+
         <button id="next-button">Далее</button>
         <p id="result-text">result-text</p>
         <button id="answer-button" onClick="refreshPage()">Пройти ещё раз</button>
