--- a/public/recipebook/pie.html
+++ b/public/recipebook/pie.html
@@ -17,6 +17,19 @@
             <div class="recipe__container-image">
                 <img class="recipe-photo" src="../images/recipes/pie.webp" alt="Пирог с голубиным мясом">
             </div>
+            <div class="rating card_stars">
+                <h2>
+                    Оцените рецепт
+                </h2>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <h3 id="output">
+                    Ваша оценка: 0/5
+                </h3>
+            </div>
             <div class="recipe__container-block">
                 <div class="recipe__timing">
                     <p>6–8 порций</p>
@@ -60,5 +73,6 @@
             корочки.
         </div>
     </section>
+    <script src="../scripts/recipescript.js"></script>
 </body>
 </html>
