добавила отдельный файл скрипта для рецептов, добавила рейтинг в каждую карточку

--- a/public/recipebook/apple.html
+++ b/public/recipebook/apple.html
@@ -17,6 +17,19 @@
             <div class="recipe__container-image">
                 <img class="recipe-photo" src="../images/recipes/apple.png" alt="Печеные яблоки">
             </div>
+            <div class="rating card_stars">
+                <h2>
+                    Оцените рецепт
+                </h2>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <h3 id="output">
+                    Ваша оценка: 0/5
+                </h3>
+            </div>
             <div class="recipe__container-block">
                 <div class="recipe__timing">
                     <p>8 запеченных яблок</p>
@@ -43,5 +56,6 @@
         <div class="recipe__text"> Разогрейте духовку до 170 °C. У яблок удалите сердцевину, вырезав ее сверху и оставив мякоть снизу не прорезанной примерно на 2,5 см. Соедините сушеную вишню или клюкву, коричневый сахар, орехи и пряности и начините полученной смесью яблоки. Уложите яблоки в форму для выпекания, накройте фольгой и запекайте 40 минут. Затем снимите фольгу, полейте яблоки выделившимся соком и запекайте еще 25 минут. Тем временем прогрейте яблочный сок, кленовый сироп и сливочное масло на среднем огне, чтобы смесь приобрела консистенцию нежного соуса. Полейте готовые яблоки соусом и подавайте гостям угощение, не забыв к нему вилку и нож.
         </div>
     </section>
+    <script src="../scripts/recipescript.js"></script>
 </body>
 </html>
