--- a/public/recipebook/bull.html
+++ b/public/recipebook/bull.html
@@ -28,6 +28,19 @@
             <div class="recipe__container-image">
                 <img class="recipe-photo" src="../images/recipes/bull.png" alt="Дикий бык, запеченный с пореем">
             </div>
+            <div class="rating card_stars">
+                <h2>
+                    Оцените рецепт
+                </h2>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <h3 id="output">
+                    Ваша оценка: 0/5
+                </h3>
+            </div>
         </div>
         <div class="recipe__ingredients">
             <ul>
@@ -54,5 +67,6 @@
             Когда мясо прожарится до нужной готовности, переложите его на разделочную доску и дайте постоять 15 минут. Затем нарежьте ломтиками и подавайте, полив соусом, с овощами.
         </div>
     </section>
+    <script src="../scripts/recipescript.js"></script>
 </body>
 </html>
