--- a/public/recipebook/pear.html
+++ b/public/recipebook/pear.html
@@ -40,6 +40,19 @@
             <div class="recipe__container-image">
                 <img class="recipe-photo" src="../images/recipes/pear2.png" alt="Пряные груши в вине">
             </div>
+            <div class="rating card_stars">
+                <h2>
+                    Оцените рецепт
+                </h2>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <h3 id="output">
+                    Ваша оценка: 0/5
+                </h3>
+            </div>
         </div>
         <div class="recipe__text">
             С апельсинов при помощи ножа для чистки овощей снимите цедру, выжмите из мякоти сок. В центр кастрюли насыпьте сахар  — в  достаточном объеме, чтобы он закрывал
@@ -52,5 +65,6 @@
             или полив небольшим количеством сливок.
         </div>
     </section>
+    <script src="../scripts/recipescript.js"></script>
 </body>
 </html>
