--- a/public/recipebook/soup.html
+++ b/public/recipebook/soup.html
@@ -17,6 +17,19 @@
             <div class="recipe__container-image">
                 <img class="recipe-photo" src="../images/recipes/soup.png" alt="Суп из лука-порея">
             </div>
+            <div class="rating card_stars">
+                <h2>
+                    Оцените рецепт
+                </h2>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <h3 id="output">
+                    Ваша оценка: 0/5
+                </h3>
+            </div>
             <div class="recipe__container-block">
                 <div class="recipe__timing">
                     <p>4 порции</p>
@@ -41,5 +54,6 @@
         <div class="recipe__text"> Разогрейте 2 столовые ложки масла в кастрюле с толстым дном на среднем огне. Обжаривайте в нем порей и лук, помешивая, примерно 5 минут или до мягкости овощей. Добавьте картофель и жарьте еще 2–3 минуты, затем влейте бульон. Доведите до кипения, затем уменьшите огонь и варите при слабом кипении 35 минут. С помощью толкушки для картофеля или погружного блендера превратите суп в пюре почти однородной консистенции. Добавьте оставшееся сливочное масло. Приправьте солью и перцем, оформите зеленью и подавайте на стол.
         </div>
     </section>
+    <script src="../scripts/recipescript.js"></script>
 </body>
 </html>
