--- a/public/recipebook/wildboar.html
+++ b/public/recipebook/wildboar.html
@@ -30,6 +30,19 @@
             <div class="recipe__container-image">
                 <img class="recipe-photo" src="../images/recipes/wildboar.png" alt="Запеченное мясо кабана">
             </div>
+            <div class="rating card_stars">
+                <h2>
+                    Оцените рецепт
+                </h2>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <h3 id="output">
+                    Ваша оценка: 0/5
+                </h3>
+            </div>
         </div>
         <div class="recipe__ingredients">
             <ul>
@@ -52,5 +65,7 @@
             Варите соус на слабом огне 10–15 минут. Полейте мясо кабана соусом и подавайте.
         </div>
     </section>
+
+    <script src="../scripts/recipescript.js"></script>
 </body>
 </html>
