--- a/public/recipebook/cake.html
+++ b/public/recipebook/cake.html
@@ -28,6 +28,19 @@
             <div class="recipe__container-image">
                 <img class="recipe-photo" src="../images/recipes/cake.png" alt="Лимонные пирожные">
             </div>
+            <div class="rating card_stars">
+                <h2>
+                    Оцените рецепт
+                </h2>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <h3 id="output">
+                    Ваша оценка: 0/5
+                </h3>
+            </div>
         </div>
         <div class="recipe__ingredients">
             <ul>
@@ -63,5 +76,6 @@
             пор, пока не образуется красивая однородная глазурь.
         </div>
     </section>
+    <script src="../scripts/recipescript.js"></script>
 </body>
 </html>
