--- a/public/recipebook/chiken.html
+++ b/public/recipebook/chiken.html
@@ -17,6 +17,19 @@
             <div class="recipe__container-image">
                 <img class="recipe-photo" src="../images/recipes/chiken.png" alt="Курица в меду">
             </div>
+            <div class="rating card_stars">
+                <h2>
+                    Оцените рецепт
+                </h2>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <h3 id="output">
+                    Ваша оценка: 0/5
+                </h3>
+            </div>
             <div class="recipe__container-block">
                 <div class="recipe__timing">
                     <p>3 - 4 порции</p>
@@ -48,5 +61,6 @@
             половину, чтобы подать отдельно.
         </div>
     </section>
+    <script src="../scripts/recipescript.js"></script>
 </body>
 </html>
