--- a/public/recipebook/wine.html
+++ b/public/recipebook/wine.html
@@ -17,6 +17,19 @@
             <div class="recipe__container-image">
                 <img class="recipe-photo" src="../images/recipes/wine.jpg" alt="Сангрия Джоффри">
             </div>
+            <div class="rating card_stars">
+                <h2>
+                    Оцените рецепт
+                </h2>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <span class="rating-star">&#9733;</span>
+                <h3 id="output">
+                    Ваша оценка: 0/5
+                </h3>
+            </div>
             <div class="recipe__container-block">
                 <div class="recipe__timing">
                     <p>4 порции</p>
@@ -43,5 +56,7 @@
             Вымойте апельсины и лимоны, нарежьте ломтиками. Опустите персики в кипящую воду на несколько секунд, затем очистите, разделите пополам, удалите косточки, мякоть также нарежьте дольками. Положите фрукты в графин, добавьте красное вино и подсластите сахарным сиропом. Добавьте апельсиновый сок, бренди и кюрасао, размешайте и охладите в течение 2-3 часов.
         </div>
     </section>
+
+    <script src="../scripts/recipescript.js"></script>
 </body>
 </html>
